<resources>
    <string name="app_name"><b>Whiskers</b></string>
    <string name="logo">Whiskers</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started"><b>Healthy and Happy Pets</b></string>
    <string name="get_started2">Be the voice for the voiceless, Join us.
    <br>Save a life, win a friend !</br></string>
    <string name="get_button">Get Started</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login">Login</string>
    <string name="social_log_in">social log in</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="secondary_text">text</string>
    <string name="supporting_text">text</string>
    <string name="photo_of_the_animal">Photo of the animal</string>
    <string name="profile">Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="add_post">Add Post</string>
    <string name="start">Start</string>
    <string name="stop_location">stop location</string>
    <string name="add_description">Add Description</string>
    <string name="post_blog">Post </string>
    <string name="send_current_location">Send current location</string>
    <string name="details">Details</string>
    <string name="todo">todo</string>
    <string name="homeless_pets_home">Homeless Pets Home</string>
    <string name="edit_profile">edit Profile</string>
    <string name="logout">logout</string>
</resources>