<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".CardFragment">

    <!-- TODO: Update blank fragment layout -->


        <com.google.android.material.card.MaterialCardView
                app:strokeColor="@color/light_orange"
                app:strokeWidth="3dp"
                app:cardCornerRadius="20dp"
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <!-- Media -->
                <ImageView
                        android:id="@+id/fragImage"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/dog"
                        android:contentDescription="@string/photo_of_the_animal" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"

                        >

                    <!-- Title, secondary and supporting text -->
                    <TextView
                            android:id="@+id/fragTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                            android:id="@+id/fragLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/secondary_text"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                    <Button
                        android:id="@+id/detailsBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

</FrameLayout>